; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_parse_loose_header.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_parse_loose_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_info = type { i64* }

@OBJECT_INFO_INIT = common dso_local global %struct.object_info zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_loose_header(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.object_info, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = bitcast %struct.object_info* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 bitcast (%struct.object_info* @OBJECT_INFO_INIT to i8*), i64 8, i1 false)
  %7 = load i64*, i64** %4, align 8
  %8 = getelementptr inbounds %struct.object_info, %struct.object_info* %5, i32 0, i32 0
  store i64* %7, i64** %8, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @parse_loose_header_extended(i8* %9, %struct.object_info* %5, i32 0)
  ret i32 %10
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @parse_loose_header_extended(i8*, %struct.object_info*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
